[package]
name = "rustchimp"
version = "0.1.0"
edition = "2021"
authors = ['Cristian Muriel <murielmaths@gmail.com>']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustchimp"

